2020-01-15  Danilo Chang

    * Bump version to v0.6
    * Add check failed case

2020-01-01  Danilo Chang

    * Bump version to v0.5
    * Free buffer in CAN_EXPORT_TO_MEMORY, CAN_EXPORT_AREA_TO_MEMORY

2019-03-28  Danilo Chang

    * Bump version to v0.4

2018-10-23  Danilo Chang

    * Bump version to v0.3
    * Add load_font font_name command

2018-10-22  Danilo Chang

    * Bump version to v0.2
    * Add caca::create_dither command

2018-10-19  Danilo Chang

    * Add more examples
    * Add STYLE variable(s)

2018-10-18  Danilo Chang

    * Bump version to v0.1
    * Add basic display and canvas functions

2018-10-17  Danilo Chang

    * Uupdate package name to caca
    * Dump sample extension
