@@ -1,3 +1,7 @@
+2020-02-01  Danilo Chang
+
+    * Add basic canvas test cases
+
 2020-01-15  Danilo Chang
 
     * Bump version to v0.6
